--- a/style.css
+++ b/style.css
@@ -4,44 +4,77 @@
 }
 
 body{
+  padding: 10px;
+  margin: 10px;
   background-color: #22212c;
-  font-family: sans-serif;
-  padding: 2vh;
-  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #container{
-  padding: 50px;
-  margin: 50px;
+  
+
   display: flex;
   flex-direction: column ;
   align-items: center ;
-  justify-content: space-around;
+  justify-content: space-around; 
   flex-wrap: nowrap;
-  
+  box-shadow: 0px 1px 3px 3px blueviolet;
 }
 
 #social{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 300px;
-  height:100px;
-  border: 1px wheat solid;
+  width: 100%;
+  border: 1px blueviolet solid;
+  font-size:medium;
+
+  box-shadow: 0px 1px 3px 3px white;
  
 }
 #foto{
   position: static;
-  width: 213px;
-  height: 213px;
+  width: 200px;
+  height: 200px;
   left: 612px;
   top: 193px;
-
-  border: 2px solid greenyellow;
+  border: 2px solid blueviolet;
   box-sizing:border-box;
+  border-radius: 100%;
+
+  box-shadow: -10px -10px 200px -10px blueviolet;
+}
+
+#rodape{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#fundo{
+  background: black;
+  border-radius: white 1px;
 }
 
 img{
-  width: 208px;
-  height: 209px;
+    border-radius: 100%;
+    height: 196px;
+    object-fit: cover;
+    width: 195px;  
 }
+
+a{
+  color: blueviolet;
+}
+  
+span{
+  color: blueviolet;
+  font-size: medium;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+span, h1{
+  color: white;
+  text-shadow: 1px 1px 5px rgb(155, 81, 224);
+}
+
