--- a/style.css
+++ b/style.css
@@ -19,18 +19,30 @@ body{
   justify-content: space-around; 
   flex-wrap: nowrap;
   box-shadow: 0px 1px 3px 3px blueviolet;
+
+
+  animation-name: animation;
+  animation-duration: 10s;
+  animation-iteration-count: 1;
+  animation-delay: 1s;
 }
 
 #social{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 90%;
+  width: 60%;
   border: 1px blueviolet solid;
   font-size:medium;
 
   box-shadow: 0px 1px 3px 3px white;
- 
+
+ animation-name: animation;
+ animation-iteration-count: 60;
+ animation-duration: 1s;
+ animation-delay:1s;
+ animation-direction:2;
+ animation-direction:alternate;
 }
 #foto{
   position: static;
@@ -43,6 +55,8 @@ body{
   border-radius: 100%;
 
   box-shadow: -10px -10px 200px -10px blueviolet;
+
+ 
 }
 
 #rodape{
@@ -52,8 +66,13 @@ body{
 }
 
 #fundo{
-  background: black;
   border-radius: white 1px;
+  background: black;
+
+  animation-name: animation;
+  animation-duration: 10s;
+  animation-iteration-count: 1;
+  animation-delay: 1s;
 }
 
 img{
@@ -78,3 +97,15 @@ span, h1{
   text-shadow: 1px 1px 5px rgb(155, 81, 224);
 }
 
+
+
+@keyframes animation{
+  from{
+    background: blueviolet;
+    border-radius: 0px;
+  }
+  to{
+    background:black;
+    border-radius: 100px;
+  }
+}
